# MinPanel

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
data/: plugin.json
data/plugins/: apache.lua  mysql.lua  php.lua  phpmyadmin.lua
data/ssl/ca/: rootCA.pem
data/templates/default/: app.js  database.html  icons.css  index.html  layout.html  login.html  soft.html  topbar.html  website.html
data/templates/shared/: core.js
data/templates/shared/pages/: dashboard.js  database.js  software.js  website.js
scratch/: verify_parsing.lua
src/: auth.rs  dashboard.rs  file.rs  main.rs  models.rs  process.rs  routes.rs  system.rs  website.rs  windows_gui.rs
src/ui/dashboard/: app.js  database.html  icons.css  layout.html  soft.html  styles.css  website.html
